syntax = "proto3";

package inventory;
option go_package="./inventory";
service Inventory {
  rpc SetInv(GoodsInventoryInfo) returns (Empty); //设置库存
  rpc InvDetail(GoodsInventoryInfo) returns (GoodsInventoryInfo); //查询库存
  rpc Sell(SellInfo) returns (Empty);   //扣减库存
  rpc Reback(SellInfo) returns (Empty); //归还库存

}

//库存信息
message GoodsInventoryInfo {
  int32 goodsId = 1;
  int32 num = 2;
}
message Empty{

}
//批量库存信息
message SellInfo {
  repeated GoodsInventoryInfo goodsInfo = 1;
  string orderSn = 2;
}

